2003-05-28  Petr Stehlik  <pstehlik@sophics.cz>
* cpu_m68k.asm - major update, brings it to the 1.3.0+ level of cpu.c
  Thanks Gerhard.

* devices.c, atari.h, rdevice.[ch] - new R: device support (sockets).
  Originally written by Tom Hunt. Fixed, updated and prepared for Atari800
  integration by Chris Martin <cmartin@ti.com>. Thanks Chris!

* atari.c, ui.c, rt-config.[ch], Makefile.in - updated to allow run-time
  configuration of the R: entry in HATABS.

* DOC/sockets.txt - is an excerpt from mails I got from Chris. It may
  explain some basic ideas about the R: device.


2003-03-07  Piotr Fusik  <fox@scene.pl>
* pia.[ch], memory.[ch], atari.c: fixed MultiJoy and PORTB:
  PORTA must be configured as output to select MultiJoy port.
  PORTB direction register can be read.
  PORTB lines stay high if configured as inputs
  ("Road Race" works in XL/XE mode - didn't since 1.2.4).
  Reset sets PORTB output (not 0xD301, which may be direction register
  at the moment) to 0xFF.
* cartridge.c, cassette.c, input.c: copyright fix (I created these files)


2003-03-03  Mark Grebe  <markgrebe@yahoo.com>
* ui.c: Save/Load Disk Set implemented. Result of Save is a text file
  containing names of the disk images that are currently in the drives.
  On saving drives with no disks are marked as "Empty" and on loading
  no changes are made to such drives. This allows the user to load multiple
  disk sets sequentially. File extension is ".set".


2003-03-03  Ed Cogburn  <ecogburn@xtn.net>
* mzpokeysnd.c: Initialize some uninitialized variables to fix gcc warning

* devices.c, compfile.c: tmpnam() -> mkstemp() to fix gcc warning

* atari_sdl.c: control key support added (how it could be compiled before?)

* configure.ac: massive rewrite, new way of handling our options. Config
  summary added.

* Makefile.in: a number of small changes, and OBJ is changed to OBJS for
  consistancy within configure.ac

* atari.c, diskled.c, sio.c: diskled module is compiled in only if it's